Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
reactos-bootcd-0.4.16-dev-68-gf045ea4-x86-gcc-lin-dbg
- New installation on newly formatted partition
- Open Event Viewer
- Click on "next event" (green arrow to the bottom)
Event viewer shows garbage

- Video : ReactOS-screen0.webm

Log says :
err:(win32ss/user/user32/windows/message.c:1556) Exception Dialog unicode 0040A696 Msg 273 pti B1767740 Wndpti B1767740 |
Attachments
Issue Links
- blocks
-
CORE-20023 Event Viewer (eventvwr) meta bug
-
- Reopened
-
-
CORE-20021 Event Viewer: Upon treeview change, buttons are updated but not other fields
-
- Resolved
-