[EVENTVWR] Localize and check item count (#7757)

Don’t display garbage to the users.
JIRA issue: CORE-19786
- Localize message text by using
  newly added
  IDS_CONTFROMBEGINNING
  and IDS_CONTFROMEND
  resource strings.
- Check item count before
  showing next/previous item.
- Add EnableEventDetailsButtons
  function.