base/applications/mscutils/eventvwr/resource.h
@@ -105,6 +105,8 @@
 #define IDS_CLEAREVENTS_MSG             110
 #define IDS_EVENTSTRINGIDNOTFOUND       111
 #define IDS_RESTOREDEFAULTS             112
+#define IDS_CONTFROMBEGINNING           113
+#define IDS_CONTFROMEND                 114
 
 #define IDS_USAGE                       120
 #define IDS_EVENTLOGFILE                121
